--- a/what.html
+++ b/what.html
@@ -9,8 +9,7 @@
 <style>
 
 body {
-background-color: greenyellow;
-
+background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(219,211,0,1));
 font-family: "Lato", sans-serif;
 
 }
