--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
   <title>Gaffer</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
-
+<script src="/Users/sanz/Documents/Code/Project/login.js"></script>
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./login_style.css">
 
 </head>
@@ -17,21 +17,22 @@
 		<h1>Gaffer</h1>
 		<p><h3>Football Management System</h3></p>
 		<span>
+		<span>
 			<p>login with social media</p>
 			<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
 		</span>
+	</span>
 		</div>
 	</div>
 	
 	
 		<div class="right">
 		<h5>Login</h5>
-		<p>Don't have an account? <a href="#">Create Your Account</a></p>
 		<div class="inputs">
-			<input type="text" placeholder="user name">
+			<input type="text" id="username" placeholder="user name">
 			<br>
-			<input type="password" placeholder="password">
+			<input type="password" id="password" placeholder="password">
 		</div>
 			
 			<br><br>
@@ -42,14 +43,17 @@
 		<input type="checkbox" name="item" checked/>
 		<span class="text-checkbox">Remember me</span>
 	</label>
-			<p>forget password?</p>
+			<p><a href="#">Forgot Password?</a></p>
 		</div>
-			
 			<br>
-			<button>Login</button>
+			<input type="button" value="Login" id="submit" onclick="validate()"/>
+			<p>Don't have an account? <a href="/Users/sanz/Documents/Code/Project/Signup.html">Create Your Account</a></p>
+			
 	</div>
+
 	
 </div>
+
 <!-- partial -->
   
 </body>
