--- a/what.html
+++ b/what.html
@@ -1,129 +1,27 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en" >
 <head>
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<style>
-
-body {
-background-image: linear-gradient(to right, rgba(255,0,0,0), rgba(219,211,0,1));
-font-family: "Lato", sans-serif;
-
-}
-
-.sidenav {
-
-height: 100%;
-
-width: 0;
-
-position: fixed;
-
-z-index: 1;
-
-top: 0;
-
-left: 0;
-
-background-color: #111;
-
-overflow-x: hidden;
-
-transition: 0.5s;
-
-padding-top: 60px;
-
-}
-
-.sidenav a {
-
-padding: 8px 8px 8px 32px;
-
-text-decoration: none;
-
-font-size: 25px;
-
-color: #818181;
-
-display: block;
-
-transition: 0.3s;
-
-}
-
-.sidenav a:hover {
-
-color: #f1f1f1;
-
-}
-
-.sidenav .closebtn {
-
-position: absolute;
-
-top: 0;
-
-right: 25px;
-
-font-size: 36px;
-
-margin-left: 50px;
-
-}
-
-@media screen and (max-height: 450px) {
-
-.sidenav {padding-top: 15px;}
-
-.sidenav a {font-size: 18px;}
-
-}
-
-</style>
-
-</head>
-
+  <meta charset="UTF-8">
+  <title>Admin Dashboard</title>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/what.css">
+  <script src="/Users/sanz/Documents/Code/Project/what.js"></script>
+  </head>
 <body>
-
-<div id="mySidenav" class="sidenav">
-
-<a href="javascript:void(0)" class="closebtn" onclick="closeNav()">x</a>
-
-<a href="#">About Team</a>
-
-<a href="#">Players</a>
-
-<a href="#">Manager</a>
-
-<a href="#">Sponsors</a>
-
+<p id="demo"></p>
+  <div class="container">
+  	<img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
+  <div class="overlay">Dashboard</div>
+  <div class="center">WELCOME ADMIN!</div>
 </div>
 
-<center><h2>Impulse FC</h2></center>
-
-<marquee><p>Here to WIN!</p></marquee>
-<center>
-<span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
-</center>
-<script>
-
-function openNav() {
-
-document.getElementById("mySidenav").style.width = "250px";
-
-}
-
-function closeNav() {
-
-document.getElementById("mySidenav").style.width = "0";
-
-}
-
-</script>
-
+<div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Create User</button>
+	<button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/team_stat.html';">View Team Status</button></p></center>
+</div>
+<div><center><p><button class="button button3" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/stadium.html';">Stadium</button>
+	<button class="button button4" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/match.html';">Set Match</button></p></center>
+</div>
 </body>
-
+</html>
+</body>
 </html>
