added other users

--- a/create_player.html
+++ b/create_player.html
@@ -26,7 +26,7 @@
  <p class="p5">Position&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="GK">
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Time to Recover<input type="text" placeholder="0"></p>
   <p>Kit No&emsp;&emsp;&nbsp;<input type="number" placeholder="00"></p>
- <center><button class="button button7" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Submit</button></center>
+ <center><button class="button button7" onclick="validate2()" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Submit</button></center>
 
 </body>
 </html>
