--- a/Login.html
+++ b/Login.html
@@ -15,9 +15,9 @@
 	<div class="left">
 		<div class="overlay">
 		<h1>Gaffer</h1>
-		<p><h3>Football Management System</h3></p>
+		<p><h3>&nbsp;&nbsp;&nbsp;Football Management System</h3></p>
 		<span>
-		<span>
+		<span class="socialgg">
 			<p>login with social media</p>
 			<a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
 			<a href="#"><i class="fa fa-twitter" aria-hidden="true"></i> </a>
@@ -30,7 +30,7 @@
 		<div class="right">
 		<h5>Login</h5>
 		<div class="inputs">
-			<input type="text" id="username" placeholder="user name">
+			<input type="text" id="username" placeholder="username">
 			<br>
 			<input type="password" id="password" placeholder="password">
 		</div>
