--- a/Signup.html
+++ b/Signup.html
@@ -70,9 +70,11 @@
                 </ol>
                 <div id="next-page" alt="Kiwi standing on oval"></div>
                 <div class="error-message"></div>
-                
+               
             </form>
-        <h1 id="wf" style="opacity:0;width: 600px; margin-top:1.1em;display:none; margin-bottom:1em">Thank you!</h1>
+        <h1 id="wf" style="opacity:0;width: 600px; margin-top:1.1em;display:none; margin-bottom:1em" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/login.html';">Thank you!</h1>
+
+
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js'></script><script  src="./signup_script.js"></script>
 
