Added Logout option

--- a/Manager.html
+++ b/Manager.html
@@ -8,7 +8,18 @@
   <script src="/Users/sanz/Documents/Code/Project/what.js"></script>
   </head>
 <body>
+ <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Infomation</a>
+  <a href="#contact">Contact</a>
+  <div class="topnav-right">
+    <a href="#search">Search</a>
+    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+  </div>
+</div>
+  
 <p id="demo"></p>
+
   <div class="container">
     <img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
   <div class="overlay">Dashboard</div>
@@ -16,7 +27,7 @@
 </div>
 <br>
 <br>
-<div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Select Squad</button>
+<div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/squad.html';">Select Squad</button>
   <button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/team_stat.html';">View Team Status</button></p></center>
 </div>
 
