--- a/create_user.html
+++ b/create_user.html
@@ -8,6 +8,15 @@
   <script src="/Users/sanz/Documents/Code/Project/create_user.js"></script>
   </head>
 <body>
+   <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Infomation</a>
+  <a href="#contact">Contact</a>
+  <div class="topnav-right">
+    <a href="#search">Search</a>
+    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+  </div>
+</div>
 
   <div class="container">
   	<img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
