--- a/create_player.html
+++ b/create_player.html
@@ -8,6 +8,17 @@
   <script src="/Users/sanz/Documents/Code/Project/create_player.js"></script>
   </head>
 <body>
+
+ <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Infomation</a>
+  <a href="#contact">Contact</a>
+  <div class="topnav-right">
+    <a href="#search">Search</a>
+    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+  </div>
+</div>
+
 <section class="width-800px">
   <div class="container">
   	<img src="/Users/sanz/Documents/Code/Project/goalpost.png" alt="indoor_football" class="image" width="800">
