--- a/what.html
+++ b/what.html
@@ -8,7 +8,16 @@
   <script src="/Users/sanz/Documents/Code/Project/what.js"></script>
   </head>
 <body>
-<p id="demo"></p>
+   <div class="topnav">
+  <a class="active" href="#home">Home</a>
+  <a href="#news">Infomation</a>
+  <a href="#contact">Contact</a>
+  <div class="topnav-right">
+    <a href="#search">Search</a>
+    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+  </div>
+</div>
+
   <div class="container">
   	<img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
   <div class="overlay">Dashboard</div>
