--- a/create_player.html
+++ b/create_player.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Create User</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/create_player.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./css/create_player.css">
   <script src="/Users/sanz/Documents/Code/Project/create_player.js"></script>
   </head>
 <body>
@@ -21,23 +21,158 @@
 
 <section class="width-800px">
   <div class="container">
-  	<img src="/Users/sanz/Documents/Code/Project/goalpost.png" alt="indoor_football" class="image" width="800">
+  	<img src="./resources/goalpost.png" alt="indoor_football" class="image" width="800">
+    <br>
+    
 </div>
+<br>
+
 </section>
   <div class="center">New Player Information</div>
+  <br>
+  <br>   
+
+
 <div class="player">
-  <p class="p1">Player ID&nbsp;&emsp;&nbsp;<input type="number" placeholder="0000">
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Height&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;<input type="number" placeholder="- ft"></p>
- <p class="p2">Name&emsp;&emsp;&emsp;<input type="text"placeholder="Player1">
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Weight&emsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp;<input type="number" placeholder="0 kg"></p>
- <p class="p3">Date of Birth<input type="text" placeholder="01/01/1990">
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Salary&emsp;&emsp;&emsp;&nbsp;&nbsp;<input type="number" placeholder="0"></p>
- <p class="p4">Gender&emsp;&emsp;&nbsp;<input type="text" placeholder="Male">
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Availability&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Available"></p>
- <p class="p5">Position&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="GK">
-    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Time to Recover<input type="text" placeholder="0"></p>
-  <p>Kit No&emsp;&emsp;&nbsp;<input type="number" placeholder="00"></p>
- <center><button class="button button7" onclick="validate2()" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Submit</button></center>
+  <form action="./server/connect.php" method="post">
+    <div class="form-group">
+                <label for="playerid">Player ID</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="playerid"
+                  name="playerid"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="name"
+                  name="name"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="height">Height</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="height"
+                  name="height"
+                />
+              </div>
+
+               <div class="form-group">
+                <label for="weight">Weight</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="weight"
+                  name="weight"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="dob">Date of Birth</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="dob"
+                  name="dob"
+                />
+              </div>
+              <div class="form-group">
+                <label for="gender">Gender</label>
+                <div>
+                  <label for="male" class="radio-inline"
+                    ><input
+                      type="radio"
+                      name="gender"
+                      value="m"
+                      id="male"
+                    />Male</label
+                  >
+                  <label for="female" class="radio-inline"
+                    ><input
+                      type="radio"
+                      name="gender"
+                      value="f"
+                      id="female"
+                    />Female</label>
+                </div>
+              </div>
+
+<div class="form-group">
+                <label for="availability">Availability</label>
+                <div>
+                  <label for="Yes" class="radio-inline"
+                    ><input
+                      type="radio"
+                      name="availability"
+                      value="y"
+                      id="Yes"
+                    />Yes</label
+                  >
+                  <label for="No" class="radio-inline"
+                    ><input
+                      type="radio"
+                      name="availability"
+                      value="n"
+                      id="No"
+                    />No</label>
+                </div>
+              </div>
+
+<div class="form-group">
+                <label for="position">Position</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="position"
+                  name="position"
+                />
+              </div>
+
+<div class="form-group">
+                <label for="timetorecover">Time to Recover</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="timetorecover"
+                  name="timetorecover"
+                />
+              </div>
+<div class="form-group">
+                <label for="kitno">Kit No.</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="kitno"
+                  name="kitno"
+                />
+              </div>
+              <input type="submit" class="btn btn-primary" />
+            </form>
+
+ <!--  <p class="p1">Player ID&nbsp;&emsp;&nbsp;<input type="number" placeholder="0000">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Height&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;<input type="number" placeholder="- ft"></p> -->
+ <!-- <p class="p2">Name&emsp;&emsp;&emsp;<input type="text"placeholder="Player1"> -->
+  <!--   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Weight&emsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp;<input type="number" placeholder="0 kg"></p> -->
+ <!-- <p class="p3">Date of Birth<input type="text" placeholder="01/01/1990">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Salary&emsp;&emsp;&emsp;&nbsp;&nbsp;<input type="number" placeholder="0"></p> -->
+<!--  <p class="p4">Gender&emsp;&emsp;&nbsp;<input type="text" placeholder="Male">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Availability&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Available"></p> -->
+<!--  <p class="p5">Position&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="GK">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Time to Recover<input type="text" placeholder="0"></p> --><!-- 
+  <p>Kit No&emsp;&emsp;&nbsp;<input type="number" placeholder="00"></p> -->
+ <center><div class="toast-header">
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div></center>
 
 </body>
 </html>
