php enabled files

--- a/create_owner.html
+++ b/create_owner.html
@@ -34,7 +34,7 @@
 
 
 <div class="player">
-  <form action="connect.php" method="post">
+  <form action="server/create_owner.php" method="post">
     <div class="form-group">
                 <label for="ownerid">Owner ID</label>
                 <input
