--- a/create_physio.html
+++ b/create_physio.html
@@ -34,7 +34,7 @@
 
 
 <div class="player">
-  <form action="connect.php" method="post">
+  <form action="server/create_physio.php" method="post">
     <div class="form-group">
                 <label for="physioid">Physio ID</label>
                 <input
@@ -120,7 +120,7 @@
             </form>
 
  <center><div class="toast-header">
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" onclick="window.location.href = './create_user.html';">
       <span aria-hidden="true">&times;</span>
     </button>
   </div></center>
