--- a/create_player.html
+++ b/create_player.html
@@ -34,7 +34,7 @@
 
 
 <div class="player">
-  <form action="./server/connect.php" method="post">
+  <form action="./server/create_player.php" method="post">
     <div class="form-group">
                 <label for="playerid">Player ID</label>
                 <input
