--- a/fitness.html
+++ b/fitness.html
@@ -65,16 +65,18 @@
                  {
              ?>
              <tr>
-                 <td><?php echo $rows['playerid'];?></td>
-                 <td><?php echo $rows['name'];?></td>
-                 <td><?php echo $rows['height'];?></td>
-                 <td><?php echo $rows['weight'];?></td>
-        <td><?php echo $rows['dob'];?></td>
-        <td><?php echo $rows['gender'];?></td>
-        <td><?php echo $rows['availability'];?></td>
-        <td><?php echo $rows['position'];?></td>
-        <td><?php echo $rows['timetorecover'];?></td>
-        <td><?php echo $rows['kitno'];?></td>
+                 <td><label class="container"><?php echo $rows['playerid'];?></td>
+               </label>
+                 <td><label class="container"><?php echo $rows['playerid'];?></label></td>
+                 <td><label class="container"><?php echo $rows['name'];?></label></td>
+                 <td><label class="container"><?php echo $rows['height'];?></label></td>
+                 <td><label class="container"><?php echo $rows['weight'];?></label></td>
+        <td><label class="container"><?php echo $rows['dob'];?></label></td>
+        <td><label class="container"><?php echo $rows['gender'];?></label></td>
+        <td><label class="container"><?php echo $rows['availability'];?></label></td>
+        <td><label class="container"><?php echo $rows['position'];?></label></td>
+        <td><label class="container"><?php echo $rows['timetorecover'];?></label></td>
+        <td><label class="container"><?php echo $rows['kitno'];?></label></td>
              </tr>
              <?php
                  }
