--- a/create_manager.html
+++ b/create_manager.html
@@ -34,7 +34,7 @@
 
 
 <div class="player">
-  <form action="server/create_manager.php" method="post">
+  <form action="connect.php" method="post">
     <div class="form-group">
                 <label for="managerid">Manager ID</label>
                 <input
