--- a/Manager.html
+++ b/Manager.html
@@ -27,8 +27,11 @@
 </div>
 <br>
 <br>
-<div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/squad.html';">Select Squad</button>
-  <button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/team_stat.html';">View Team Status</button></p></center>
+<div><center><p><button class="button button1" onclick="window.location.href = './select_squad.php';">Select Squad</button>
+  <button class="button button2" onclick="window.location.href = './info.html';">View Team Status</button></p></center>
+  <div><center><p><button class="button button3" onclick="window.location.href = './update.html';">Update Match Info</button>
+ </p></center>
+</div>
 </div>
 
 </body>
