--- a/create_player.html
+++ b/create_player.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Create User</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./css/create_player.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/create_player.css">
   <script src="/Users/sanz/Documents/Code/Project/create_player.js"></script>
   </head>
 <body>
@@ -21,7 +21,7 @@
 
 <section class="width-800px">
   <div class="container">
-  	<img src="./resources/goalpost.png" alt="indoor_football" class="image" width="800">
+  	<img src="/Users/sanz/Documents/Code/Project/goalpost.png" alt="indoor_football" class="image" width="800">
     <br>
     
 </div>
@@ -34,7 +34,7 @@
 
 
 <div class="player">
-  <form action="./server/create_player.php" method="post">
+  <form action="connect.php" method="post">
     <div class="form-group">
                 <label for="playerid">Player ID</label>
                 <input
@@ -169,7 +169,7 @@
     &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Time to Recover<input type="text" placeholder="0"></p> --><!-- 
   <p>Kit No&emsp;&emsp;&nbsp;<input type="number" placeholder="00"></p> -->
  <center><div class="toast-header">
-    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">
       <span aria-hidden="true">&times;</span>
     </button>
   </div></center>
