--- a/what.html
+++ b/what.html
@@ -25,10 +25,13 @@
 </div>
 
 <div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Create User</button>
-	<button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/team_stat.html';">View Team Status</button></p></center>
+	<button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/info.html';">View Team Status</button></p></center>
 </div>
 <div><center><p><button class="button button3" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/stadium.html';">Stadium</button>
 	<button class="button button4" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/match.html';">Set Match</button></p></center>
+</div>
+<div><center>
+  <button class="button button5" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/update_match.html';">Update Match</button></center>
 </div>
 </body>
 </html>
