--- a/Login.html
+++ b/Login.html
@@ -10,7 +10,6 @@
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
 <div class="box-form">
 	<div class="left">
 		<div class="overlay">
@@ -30,9 +29,9 @@
 		<div class="right">
 		<h5>Login</h5>
 		<div class="inputs">
-			<input type="text" id="username" placeholder="username">
+			<input type="text" id="username" placeholder="Username">
 			<br>
-			<input type="password" id="password" placeholder="password">
+			<input type="password" id="password" placeholder="Password">
 		</div>
 			
 			<br><br>
