--- a/create_match.html
+++ b/create_match.html
@@ -2,10 +2,10 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Create User</title>
+  <title>Schedule A Match</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="D:\IUT ACADEMIC\5th Semester\CSE 4510\Football\GAFFER\create_match.css">
-  <!--<script src="/Users/sanz/Documents/Code/Project/create_player.js"></script>-->
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/create_match.css">
+  <script src="/Users/sanz/Documents/Code/Project/create_match.js"></script>
   </head>
 <body>
 
@@ -15,40 +15,106 @@
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="D:\IUT ACADEMIC\5th Semester\CSE 4510\Football\GAFFER\login.html">Logout</a>
+    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
   </div>
 </div>
 
 <section class="width-800px">
   <div class="container">
-  	<img src="https://images.unsplash.com/photo-1434648957308-5e6a859697e8?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=774&q=80" alt="indoor_football" class="image" width="800">
-</div>
-</section>
-  <div class="center">Schedule a Match</div>
-<div class="player">
-  
- <p class="p1">Opponent Name    &nbsp;&emsp;&nbsp;<input type="text" placeholder="IMPULSE FC"></p>
- <p class="p2">Opponent ID      &nbsp;&emsp;&nbsp;<input type="number" placeholder="1122"></p>        
- <p class="p3">Date             &nbsp;&emsp;&nbsp;<input type="date" placeholder="30/10/2022"></p> 
- <p class="p4">Time             &nbsp;&emsp;&nbsp;<input type="time" placeholder="30/10/2022"></p> 
- <!--<p class="p5">Venue     <input type="text" placeholder="Home / Away"></p>--> 
- <p class="p6">Choose Venue   &nbsp;&emsp;&nbsp; <label for="Venue">    </label>
-    <select name="venue" id="venue">
-      <option value="home">Home</option>
-      <option value="away">Away</option>
-    </select></p> 
-
+  	<img src="/Users/sanz/Documents/Code/Project/goalpost.png" alt="indoor_football" class="image" width="800">
+    <br>
     
- <center><button class="button button7" onclick="validate2()" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_user.html';">Confirm</button></center>
+</div>
+<br>
+
+</section>
+  <div class="center">Match Information</div>
+  <br>
+  <br>   
+
+
+<div class="player">
+  <form action="connect.php" method="post">
+    <div class="form-group">
+                <label for="matchid">Match ID</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="matchid"
+                  name="matchid"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="opponent">Opponent</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="opponent"
+                  name="opponent"
+                />
+              </div>
+
+              <div class="form-group">
+                <label for="date">Date</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="date"
+                  name="date"
+                />
+              </div>
+
+               <div class="form-group">
+                <label for="time">Time</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="time"
+                  name="time"
+                />
+              <div class="form-group">
+                <label for="played">Played</label>
+                <div>
+                  <label for="male" class="radio-inline"
+                    ><input
+                      type="radio"
+                      name="played"
+                      value="y"
+                      id="yes"
+                    />Yes</label
+                  >
+                  <label for="no" class="radio-inline"
+                    ><input
+                      type="radio"
+                      name="played"
+                      value="n"
+                      id="no"
+                    />No</label>
+                </div>
+              </div>
+
+              <input type="submit" class="btn btn-primary" />
+            </form>
+
+ <!--  <p class="p1">Player ID&nbsp;&emsp;&nbsp;<input type="number" placeholder="0000">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Height&nbsp;&nbsp;&nbsp;&nbsp;&emsp;&emsp;&nbsp;<input type="number" placeholder="- ft"></p> -->
+ <!-- <p class="p2">Name&emsp;&emsp;&emsp;<input type="text"placeholder="Player1"> -->
+  <!--   &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Weight&emsp;&nbsp;&nbsp;&nbsp;&emsp;&nbsp;&nbsp;<input type="number" placeholder="0 kg"></p> -->
+ <!-- <p class="p3">Date of Birth<input type="text" placeholder="01/01/1990">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Salary&emsp;&emsp;&emsp;&nbsp;&nbsp;<input type="number" placeholder="0"></p> -->
+<!--  <p class="p4">Gender&emsp;&emsp;&nbsp;<input type="text" placeholder="Male">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Availability&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="Available"></p> -->
+<!--  <p class="p5">Position&emsp;&nbsp;&nbsp;&nbsp;<input type="text" placeholder="GK">
+    &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;Time to Recover<input type="text" placeholder="0"></p> --><!-- 
+  <p>Kit No&emsp;&emsp;&nbsp;<input type="number" placeholder="00"></p> -->
+ <center><div class="toast-header">
+    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/what.html';">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div></center>
 
 </body>
 </html>
 </body>
 </html>
-
-<!--
-     <input type="checkbox" id="home" name="home" value="home">
-    <label for="home"> Home</label>
-    <input type="checkbox" id="away" name="away" value="away">
-    <label for="away"> Away</label><br></p>
--->
