--- a/info.html
+++ b/info.html
@@ -1,29 +1,20 @@
-<<!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Team Info</title>
-	<link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
-  <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/player.css">
-  <script src="/Users/sanz/Documents/Code/Project/what.js"></script>
-  
+  <meta charset="UTF-8">
+  <title>Team Stat</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-<py-env>
-      - matplotlib
-      - pandas
-      - numpy 
-      - paths:
-		- play.csv
-</py-env>
+  <div class="team"><center>Team Stat</center></div>
+<!-- partial:index.partial.html -->
+<script src="https://www.amcharts.com/lib/3/amcharts.js?x"></script>
+<script src="https://www.amcharts.com/lib/3/serial.js?x"></script>
+<script src="https://www.amcharts.com/lib/3/themes/dark.js"></script>
+<div id="chartdiv"></div>
+<!-- partial -->
+  <script src='https://code.jquery.com/jquery-1.11.2.min.js'></script><script  src="./script.js"></script>
 
-<py-script>
-	import pandas as pd
-	data=pd.read_csv('play.csv')
-	print(data.head(5))
-</py-script>
 </body>
 </html>
