--- a/create_user.html
+++ b/create_user.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Create User</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/create_user.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./css/create_user.css">
   <script src="/Users/sanz/Documents/Code/Project/create_user.js"></script>
   </head>
 <body>
@@ -14,20 +14,20 @@
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+    <a href="logout_process.php"><div style="float:right"><button>logout</button></div></a>
   </div>
 </div>
 
   <div class="container">
-  	<img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
+  	<img src="./indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
 </div>
 <div class="container2">
   <div class="center">CHOOSE TYPE OF USER</div>
-<div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_owner.html';">Owner</button>
-	<button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_player.html';">Player</button></p></center>
+<div><center><p><button class="button button1" onclick="window.location.href = './create_owner.html';">Owner</button>
+	<button class="button button2" onclick="window.location.href = './create_player.html';">Player</button></p></center>
 </div>
-<div><center><p><button class="button button3" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_manager.html';">Manager</button>
-	<button class="button button4" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/create_physio.html';">Physio</button></p></center>
+<div><center><p><button class="button button3" onclick="window.location.href = './create_manager.html';">Manager</button>
+	<button class="button button4" onclick="window.location.href = './create_physio.html';">Physio</button></p></center>
 </div>
 
 
