--- a/manager.html
+++ b/manager.html
@@ -2,34 +2,35 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Admin Dashboard</title>
+  <title>Manager Dashboard</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./what.css">
   <script src="/Users/sanz/Documents/Code/Project/what.js"></script>
   </head>
 <body>
-   <div class="topnav">
+ <div class="topnav">
   <a class="active" href="#home">Home</a>
   <a href="#news">Infomation</a>
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="./login.html">Logout</a>
+    <a href="./logout_process.php">Logout</a>
   </div>
 </div>
+  
+<p id="demo"></p>
 
   <div class="container">
-  	<img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
+    <img src="./indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
   <div class="overlay">Dashboard</div>
-  <div class="center">WELCOME ADMIN!</div>
+  <div class="center">WELCOME Manager!</div>
+</div>
+<br>
+<br>
+<div><center><p><button class="button button1" onclick="window.location.href = './select_squad.php';">Select Squad</button>
+  <button class="button button2" onclick="window.location.href = './team_stat.html';">View Team Status</button></p></center>
 </div>
 
-<div><center><p><button class="button button1" onclick="window.location.href = './create_user.html';">Create User</button>
-	<button class="button button2" onclick="window.location.href = './squad.php';">View Team Status</button></p></center>
-</div>
-<div><center><p><button class="button button3" onclick="window.location.href = './stadium.html';">Stadium</button>
-	<button class="button button4" onclick="window.location.href = './match.html';">Set Match</button></p></center>
-</div>
 </body>
 </html>
 </body>
