--- a/physio.html
+++ b/physio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>Doctor Dashboard</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/physio.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./css/physio.css">
   <script src="/Users/sanz/Documents/Code/Project/physio.js"></script>
   </head>
 <body>
@@ -25,8 +25,8 @@
 </div>
 <br>
 <br>
-<div><center><p><button class="button button1" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/fitness.html';">Update Player Fitness</button>
-  <button class="button button2" onclick="window.location.href = '/Users/sanz/Documents/Code/Project/info.html';">View Team Status</button></p></center>
+<div><center><p><button class="button button1" onclick="window.location.href = './squad.php';">Update Player Fitness</button>
+  <button class="button button2" onclick="window.location.href = './squad.php';">View Team Status</button></p></center>
 </div>
 
 </body>
