--- a/Manager.html
+++ b/Manager.html
@@ -29,9 +29,13 @@
 <br>
 <div><center><p><button class="button button1" onclick="window.location.href = './select_squad.php';">Select Squad</button>
   <button class="button button2" onclick="window.location.href = './info.html';">View Team Status</button></p></center>
-  <div><center><p><button class="button button3" onclick="window.location.href = './update.html';">Update Match Info</button>
- </p></center>
+
+
 </div>
+<div><center><p><button class="button button3" onclick="window.location.href = './update.html';">Update Player Info</button>
+  <button class="button button4" onclick="window.location.href = './update_match.html';">Update Match Info</button></p></center>
+
+
 </div>
 
 </body>
