--- a/create_owner.html
+++ b/create_owner.html
@@ -4,24 +4,24 @@
   <meta charset="UTF-8">
   <title>Create User</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="/Users/sanz/Documents/Code/Project/create_player.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./create_player.css">
   <script src="/Users/sanz/Documents/Code/Project/create_owner.js"></script>
   </head>
 <body>
 
  <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="./what.html">Home</a>
   <a href="#news">Infomation</a>
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+    <a href="./logout_process.php">Logout</a>
   </div>
 </div>
 
 <section class="width-800px">
   <div class="container">
-  	<img src="/Users/sanz/Documents/Code/Project/goalpost.png" alt="indoor_football" class="image" width="800">
+  	<img src="./goalpost.png" alt="indoor_football" class="image" width="800">
     <br>
     
 </div>
@@ -31,10 +31,11 @@
   <div class="center">New Owner Information</div>
   <br>
   <br>   
-
+<br>
+<br>
 
 <div class="player">
-  <form action="server/create_owner.php" method="post">
+  <form action="create_owner.php" method="post">
     <div class="form-group">
                 <label for="ownerid">Owner ID</label>
                 <input
