final working files

--- a/deleted.html
+++ b/deleted.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Create User</title>
+  <title>Delete User</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./create_user.css">
   <script src="/Users/sanz/Documents/Code/Project/create_user.js"></script>
@@ -21,15 +21,18 @@
   <div class="container">
   	<img src="./indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
 </div>
-<div class="container2">
-  <div class="center">CHOOSE TYPE OF USER</div>
-<div><center><p><button class="button button1" onclick="window.location.href = './create_owner.html';">Owner</button>
-	<button class="button button2" onclick="window.location.href = './create_player.html';">Player</button></p></center>
-</div>
-<div><center><p><button class="button button3" onclick="window.location.href = './create_manager.html';">Manager</button>
-	<button class="button button4" onclick="window.location.href = './create_physio.html';">Physio</button></p></center>
-</div>
-
+<div class="container2"> <form action="./delete_user.php" method="post">
+    <div class="form-group">
+                <label for="playerid">User ID</label>
+                <input
+                  type="number"
+                  class="form-control"
+                  id="playerid"
+                  name="playerid"
+                />
+              </div>
+              <input type="submit" class="btn btn-primary" />
+            </form>
 
 </div>
 </body>
