--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 
 <script src="/Users/sanz/Documents/Code/Project/login.js"></script>
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./css/login_style.css">
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./login_style.css">
 
 </head>
 <body>
@@ -35,7 +35,6 @@
 		
 <form action="login_process.php" method="POST">
 
-
 		
 		<input type="text" id="user" name="username" placeholder="username"/>
 			<br>
@@ -53,7 +52,7 @@
 		<input type="checkbox" name="item" checked/>
 		<span class="text-checkbox">Remember me</span>
 	</label>
-			<p><a href="#">Forgot Password?</a></p>
+			<p><a href="change_pass.html">Forgot Password?</a></p>
 		</div>
 			<br>
 			
