final working files

--- a/manager.html
+++ b/manager.html
@@ -14,7 +14,7 @@
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="./logout_process.php">Logout</a>
+    <a href="./login.html">Logout</a>
   </div>
 </div>
   
@@ -28,7 +28,10 @@
 <br>
 <br>
 <div><center><p><button class="button button1" onclick="window.location.href = './select_squad.php';">Select Squad</button>
-  <button class="button button2" onclick="window.location.href = './team_stat.html';">View Team Status</button></p></center>
+  <button class="button button2" onclick="window.location.href = './info1.php';">View Team Status</button></p></center>
+  <div><center><p><button class="button button3" onclick="window.location.href = './player_update.html';">Update Match Info</button>
+ </p></center>
+</div>
 </div>
 
 </body>
