--- a/what.html
+++ b/what.html
@@ -9,26 +9,29 @@
   </head>
 <body>
    <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="./what.html">Home</a>
   <a href="#news">Infomation</a>
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="./login.html">Logout</a>
+    <a href="./logout_process.php">Logout</a>
   </div>
 </div>
 
   <div class="container">
-  	<img src="/Users/sanz/Documents/Code/Project/indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
+  	<img src="./indoor.jpg" alt="indoor_football" class="image" width="1000" height="200">
   <div class="overlay">Dashboard</div>
   <div class="center">WELCOME ADMIN!</div>
 </div>
 
 <div><center><p><button class="button button1" onclick="window.location.href = './create_user.html';">Create User</button>
-	<button class="button button2" onclick="window.location.href = './squad.php';">View Team Status</button></p></center>
+	<button class="button button2" onclick="window.location.href = './info.php';">View Team Status</button></p></center>
 </div>
 <div><center><p><button class="button button3" onclick="window.location.href = './stadium.html';">Stadium</button>
-	<button class="button button4" onclick="window.location.href = './match.html';">Set Match</button></p></center>
+	<button class="button button4" onclick="window.location.href = './create_match.html';">Set Match</button></p></center>
+</div>
+<div><center><p><button class="button button5" onclick="window.location.href = './deleted.html';">Delete User</button>
+	</p></center>
 </div>
 </body>
 </html>
