--- a/physio.html
+++ b/physio.html
@@ -4,29 +4,29 @@
   <meta charset="UTF-8">
   <title>Doctor Dashboard</title>
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./css/physio.css">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous"><link rel="stylesheet" href="./physio.css">
   <script src="/Users/sanz/Documents/Code/Project/physio.js"></script>
   </head>
 <body>
   <div class="topnav">
-  <a class="active" href="#home">Home</a>
+  <a class="active" href="./physio.html">Home</a>
   <a href="#news">Infomation</a>
   <a href="#contact">Contact</a>
   <div class="topnav-right">
     <a href="#search">Search</a>
-    <a href="/Users/sanz/Documents/Code/Project/login.html">Logout</a>
+    <a href="./logout_process.php">Logout</a>
   </div>
 </div>
 <p id="demo"></p>
   <div class="container">
-    <img src="/Users/sanz/Documents/Code/Project/goal.png" alt="indoor_football" class="image" width="1000" height="200">
+    <img src="./goal.png" alt="indoor_football" class="image" width="1000" height="200">
   <div class="overlay">Dashboard</div>
   <div class="center">WELCOME Doctor!</div>
 </div>
 <br>
 <br>
-<div><center><p><button class="button button1" onclick="window.location.href = './squad.php';">Update Player Fitness</button>
-  <button class="button button2" onclick="window.location.href = './squad.php';">View Team Status</button></p></center>
+<div><center><p><button class="button button1" onclick="window.location.href = './fitness1.php';">Update Player Fitness</button>
+  <button class="button button2" onclick="window.location.href = './squad1.php';">View Team Status</button></p></center>
 </div>
 
 </body>
